# complexity-scaling-laws

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
config/: approx_global_optima.py  dimension_scaling_slarc.json  eval_constrained_local_optima.py  eval_final.py  eval_local_optima.py  eval_temporal.py  gen_local_optima.py  gen_supervised_dataset.py  model_scaling_slarc.json  node_scaling_slarc.json  supervised_model_scaling_slarc.json  supervised_node_scaling_slarc.json
datagen/: README.md  approx_optimal.sh  optimal.sh
draw/: 3d.py  agent_vs_oracle.py  base.py  single_tour.py  sol_data.py
eval/: README.md  final.sh  temporal.sh
fits/: figure_1.txt  figure_10.txt  figure_11.txt  figure_12.txt  figure_13.txt  figure_14.txt  figure_19.txt  figure_2.txt  figure_3.txt  figure_4.txt  figure_5.txt  figure_9.txt
hpo/: snapshot_study.py
launch/: eval_final.py  eval_temporal.py  gen_supervised_dataset.py  hpo_model_agent.py  merge_supervised_dataset.py  train_model_agent.py  train_model_supervised.py
localsearch/: README.md  approx_global_optima.py  csearch.pyx  demo.py  distance.py  eval_constrained_local_optima.py  eval_local_optima.py  gen_local_optima.py  search.py  test_cython.py  utils.py  viz_gen.py
mlf_utils/: shared.py  slim_mlf_exp.py
plot/: 1_subopt_joint.py  2_cover.py  2_problem_fitness.py  3_fpc.py  README.md  build_aggregate_dataset.py  eval_aggregate_dataset.py  plot_data.py  plot_utils.py
test/: run.py  test_agent.py  test_algo.py  test_model.py
train/: README.md  (+8 more)
(+10 files in other folders)
