[tool.poetry]
name = "csl"
version = "0.1.0"
description = "Complexity Scaling Laws for Neural Models using Combinatorial Optimization"
authors = ["Lowell Weissman <lowell6@vt.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "tsp"},
    {include = "mlf_utils"},
    {include = "draw"},
    {include = "localsearch"}
]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "~2.1.1"
matplotlib = "~3.7.0"
numpy = "~1.24.4"
torch = "~2.4.1"
optuna = "~3.5.0"
tqdm = "^4.67.1"
requests = "^2.32.4"
Cython = "~0.29.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
